--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: crypto_test
-description: "A new Flutter project."
+description: 'A new Flutter project.'
 
 publish_to: 'none'
 version: 1.0.0+1
@@ -24,10 +24,11 @@ dependencies:
   flutter_screenutil: ^5.9.3
   device_preview: ^1.2.0
   faker: ^2.2.0
-  shared_preferences: ^2.5.2
-  http: ^1.3.0
   dartz: ^0.10.1
   freezed: ^2.5.8
+  fl_chart: ^0.70.2
+  retrofit: ^4.4.2
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
@@ -37,6 +38,7 @@ dev_dependencies:
   build_runner: ^2.4.15
   json_serializable: ^6.9.4
   flutter_launcher_icons: ^0.14.3
+  retrofit_generator: ^9.1.9
 
 flutter_launcher_icons:
   android: true
